src/test/ui/parser/issue-6610.rs
trait Foo { fn a() } //~ ERROR expected `;` or `{`, found `}`

fn main() {}
